After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 738654 - nm-dispatcher core dumps on g_variant_new with NULL Array
nm-dispatcher core dumps on g_variant_new with NULL Array
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: general
git master
Other Linux
: Normal major
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-10-16 21:23 UTC by Sean McCully
Modified: 2014-10-21 06:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] fix dispatcher crash when scripts are missing (1.24 KB, patch)
2014-10-20 11:09 UTC, Jiri Klimes
accepted-commit_now Details | Review

Description Sean McCully 2014-10-16 21:23:09 UTC
Stack trace of thread 31116:
                                                     #0  0x00007f6a1cf9d950 g_logv (libglib-2.0.so.0)
                                                     #1  0x00007f6a1cf9db8a g_log (libglib-2.0.so.0)
                                                     #2  0x00007f6a1cfcd66b g_variant_valist_new_nnp (libglib-2.0.so.0)
                                                     #3  0x00007f6a1cfcebd0 g_variant_valist_new (libglib-2.0.so.0)
                                                     #4  0x00007f6a1cfced1b g_variant_valist_new (libglib-2.0.so.0)
                                                     #5  0x00007f6a1cfcf0b7 g_variant_new_va (libglib-2.0.so.0)
                                                     #6  0x00007f6a1cfcf335 g_variant_new (libglib-2.0.so.0)
                                                     #7  0x0000000000404f9a handle_action (nm-dispatcher)
                                                     #8  0x00007f6a1d666df0 ffi_call_unix64 (libffi.so.6)
                                                     #9  0x00007f6a1d666861 ffi_call (libffi.so.6)
                                                     #10 0x00007f6a1d8793c4 g_cclosure_marshal_generic (libgobject-2.0.so.0)
                                                     #11 0x00007f6a1d878ba5 g_closure_invoke (libgobject-2.0.so.0)
                                                     #12 0x00007f6a1d88a1fc signal_emit_unlocked_R (libgobject-2.0.so.0)
                                                     #13 0x00007f6a1d8918c1 g_signal_emitv (libgobject-2.0.so.0)
                                                     #14 0x00000000004076b9 _nmdbus_dispatcher_skeleton_handle_method_call (nm-dispatcher)
                                                     #15 0x00007f6a1dfc5e27 skeleton_intercept_handle_method_call (libgio-2.0.so.0)
                                                     #16 0x00007f6a1dfaea9c call_in_idle_cb (libgio-2.0.so.0)
                                                     #17 0x00007f6a1cf96a1d g_main_context_dispatch (libglib-2.0.so.0)
                                                     #18 0x00007f6a1cf96db8 g_main_context_iterate.isra.29 (libglib-2.0.so.0)
                                                     #19 0x00007f6a1cf970d2 g_main_loop_run (libglib-2.0.so.0)
                                                     #20 0x0000000000404766 main (nm-dispatcher)
                                                     #21 0x00007f6a1c4f5040 __libc_start_main (libc.so.6)
                                                     #22 0x00000000004047ef _start (nm-dispatcher)
Comment 1 Jiri Klimes 2014-10-20 11:09:48 UTC
Created attachment 288913 [details] [review]
[PATCH] fix dispatcher crash when scripts are missing

The problem occurs when the scripts are missing.
Comment 2 Thomas Haller 2014-10-20 12:54:43 UTC
(In reply to comment #1)
> Created an attachment (id=288913) [details] [review]
> [PATCH] fix dispatcher crash when scripts are missing
> 
> The problem occurs when the scripts are missing.

LGTM
Comment 3 Dan Williams 2014-10-20 16:38:45 UTC
Looks good.
Comment 4 Jiri Klimes 2014-10-21 06:58:55 UTC
4ad7cda dispatcher: fix crash on missing scripts (bgo #738654)